horizontal scroll fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,6 +35,7 @@ body {
 	left: 36px;
 	min-height: 662px;
 	overflow-x: scroll;
+	overflow-y: hidden;
 }
 
 .cover {
